added function to randomly initialize the centroids

--- a/assignment7/ex7.ipynb
+++ b/assignment7/ex7.ipynb
@@ -231,6 +231,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "============= Part 4: K-Means Clustering on Pixels ===============\n",
+    "\n",
+    "In this exercise, you will use K-Means to compress an image. To do this,\n",
+    "you will first run K-Means on the colors of the pixels in the image and\n",
+    "then you will map each pixel onto its closest centroid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kMeansInitCentroids(X, K):\n",
+    "    \"\"\"\n",
+    "    This function initializes K centroids that are to beused in K-Means on the dataset X\n",
+    "    \"\"\"\n",
+    "    m,n = X.shape[0], X.shape[1]\n",
+    "    centroids = np.zeros((K,n))\n",
+    "    \n",
+    "    for i in range(K):\n",
+    "        centroids[i] = X[np.random.randint(0,m+1),:]\n",
+    "        \n",
+    "    return centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centroids = kMeansInitCentroids(X, K)\n",
+    "idx = findClosestCentroids(X, centroids)\n",
+    "centroids, idx = runKMeans(X, centroids)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
