--- a/assignment7/ex7.ipynb
+++ b/assignment7/ex7.ipynb
@@ -590,6 +590,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def projectData(X, U, K):\n",
+    "    # project x data set into z where dimension of z is determined by k\n",
+    "    m, n = X.shape\n",
+    "    U_reduce = U[:,0:K]\n",
+    "    Z = np.zeros((m,K))\n",
+    "    for i in range(m):\n",
+    "        for j in range(K):\n",
+    "            Z[i,j] = X[i,:] @ U_reduce[:,j]\n",
+    "    return Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Projection of the first example: 1.4963126084578515\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Project data into K=1 dimension(s)\n",
+    "K = 1\n",
+    "Z = projectData(X_norm, U, K)\n",
+    "print(\"Projection of the first example:\",Z[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
