graphed normalized vs. projected data after PCA

--- a/assignment7/ex7.ipynb
+++ b/assignment7/ex7.ipynb
@@ -627,6 +627,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recoverData(Z, U, K):\n",
+    "    \"\"\"\n",
+    "    Recovers an approximation of the original data when using the projected data\n",
+    "    \"\"\"\n",
+    "    X_rec = np.zeros((Z.shape[0],U.shape[0]))\n",
+    "    U_reduced = U[:,:K]\n",
+    "    \n",
+    "    for i in range(Z.shape[0]):\n",
+    "        X_rec[i,:] = Z[i,:] @ U_reduced.T\n",
+    "    \n",
+    "    return X_rec\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation of the first example: [-1.05805279 -1.05805279]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_rec  = recoverData(Z, U, K)\n",
+    "print(\"Approximation of the first example:\",X_rec[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
