--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "Text(0, 0.5, 'Throughput (mb/s)')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -57,6 +57,58 @@
     "plt.ylim(0,30)\n",
     "plt.xlabel('Latency (ms')\n",
     "plt.ylabel('Throughput (mb/s)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateMean(X):\n",
+    "    X_mean = np.mean(X, axis=0)\n",
+    "    return X_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateVariance(X):\n",
+    "    X_var = np.var(X, axis=0)\n",
+    "    return X_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimateGaussian(X):\n",
+    "    return calculateMean(X), calculateVariance(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([14.11222578, 14.99771051]), array([1.83263141, 1.70974533]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimateGaussian(X)"
    ]
   },
   {
