--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.io import loadmat"
+    "from scipy.io import loadmat\n",
+    "from scipy.stats import multivariate_normal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,7 @@
        "Text(0, 0.5, 'Throughput (mb/s)')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -61,24 +62,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateMean(X):\n",
-    "    X_mean = np.mean(X, axis=0)\n",
-    "    return X_mean"
+    "def estimateGaussian(X):\n",
+    "    \"\"\"\n",
+    "     This function estimates the parameters of a Gaussian distribution using the data in X\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = X.shape[0]\n",
+    "    \n",
+    "    #compute mean\n",
+    "    sum_ = np.sum(X,axis=0)\n",
+    "    mu = 1/m *sum_\n",
+    "    \n",
+    "    # compute variance\n",
+    "    var = 1/m * np.sum((X - mu)**2,axis=0)\n",
+    "    \n",
+    "    return mu,var"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateVariance(X):\n",
-    "    X_var = np.var(X, axis=0)\n",
-    "    return X_var"
+    "mu, sigma2 = estimateGaussian(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multivariateGaussian(X, mu, sigma2):\n",
+    "    \"\"\"\n",
+    "    Computes the probability density function of the multivariate gaussian distribution.\n",
+    "    \"\"\"\n",
+    "    k = len(mu)\n",
+    "    \n",
+    "    sigma2=np.diag(sigma2)\n",
+    "    X = X - mu.T\n",
+    "    p = 1/((2*np.pi)**(k/2)*(np.linalg.det(sigma2)**0.5))* np.exp(-0.5* np.sum(X @ np.linalg.pinv(sigma2) * X,axis=1))\n",
+    "    return p"
    ]
   },
   {
@@ -87,8 +116,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def estimateGaussian(X):\n",
-    "    return calculateMean(X), calculateVariance(X)"
+    "def selectThreshold(yval, pval):\n",
+    "    \"\"\"\n",
+    "    Find the best threshold (epsilon) to use for selecting outliers\n",
+    "    \"\"\"\n",
+    "    best_epi = 0\n",
+    "    best_F1 = 0\n",
+    "    \n",
+    "    stepsize = (max(pval) -min(pval))/1000\n",
+    "    epi_range = np.arange(pval.min(),pval.max(),stepsize)\n",
+    "    for epi in epi_range:\n",
+    "        predictions = (pval<epi)[:,np.newaxis]\n",
+    "        tp = np.sum(predictions[yval==1]==1)\n",
+    "        fp = np.sum(predictions[yval==0]==1)\n",
+    "        fn = np.sum(predictions[yval==1]==0)\n",
+    "        \n",
+    "        # compute precision, recall and F1\n",
+    "        prec = tp/(tp+fp)\n",
+    "        rec = tp/(tp+fn)\n",
+    "        \n",
+    "        F1 = (2*prec*rec)/(prec+rec)\n",
+    "        \n",
+    "        if F1 > best_F1:\n",
+    "            best_F1 =F1\n",
+    "            best_epi = epi\n",
+    "        \n",
+    "    return best_epi, best_F1"
    ]
   },
   {
@@ -97,18 +150,47 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([14.11222578, 14.99771051]), array([1.83263141, 1.70974533]))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best epsilon found using cross-validation: 8.990852779269495e-05\n",
+      "Best F1 on Cross Validation Set: 0.8750000000000001\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in long_scalars\n"
+     ]
     }
    ],
    "source": [
-    "estimateGaussian(X)"
+    "pval = multivariateGaussian(Xval, mu, sigma2)\n",
+    "epsilon, F1 = selectThreshold(yval, pval)\n",
+    "print(\"Best epsilon found using cross-validation:\",epsilon)\n",
+    "print(\"Best F1 on Cross Validation Set:\",F1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recommender System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data3 = loadmat('data/ex8_movies.mat')\n",
+    "data4 = loadmat('data/ex8_movieParams.mat')\n",
+    "Y = data3['Y'] # 1682 X 943 matrix, containing ratings (1-5) of 1682 movies on 943 user\n",
+    "R = data3['R'] # 1682 X 943 matrix, where R(i,j) = 1 if and only if user j give rating to movie i\n",
+    "X = data4['X'] # 1682 X 10 matrix , num_movies X num_features matrix of movie features\n",
+    "Theta = data4['Theta'] # 943 X 10 matrix, num_users X num_features matrix of user features"
    ]
   },
   {
