calculated average rating for Toy Story

--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recommender System"
+    "## Movie Recommender System"
    ]
   },
   {
@@ -187,10 +187,20 @@
    "source": [
     "data3 = loadmat('data/ex8_movies.mat')\n",
     "data4 = loadmat('data/ex8_movieParams.mat')\n",
-    "Y = data3['Y'] # 1682 X 943 matrix, containing ratings (1-5) of 1682 movies on 943 user\n",
+    "Y = data3['Y'] # 1682 X 943 matrix, containing ratings (1-5) of 1682 movies on 943 users\n",
     "R = data3['R'] # 1682 X 943 matrix, where R(i,j) = 1 if and only if user j give rating to movie i\n",
     "X = data4['X'] # 1682 X 10 matrix , num_movies X num_features matrix of movie features\n",
     "Theta = data4['Theta'] # 943 X 10 matrix, num_users X num_features matrix of user features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute average rating \n",
+    "print(\"Average rating for movie 1 (Toy Story):\",np.sum(Y[0,:]*R[0,:])/np.sum(R[0,:]),\"/5\")"
    ]
   },
   {
