implemented collaborative filtering cost func and gradient descent

--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -263,6 +263,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def  cofiCostFunc(params, Y, R, num_users, num_movies, num_features, Lambda):\n",
+    "    \"\"\"\n",
+    "    Returns the cost and gradient for the collaborative filtering problem\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Unfold the params\n",
+    "    X = params[:num_movies*num_features].reshape(num_movies,num_features)\n",
+    "    Theta = params[num_movies*num_features:].reshape(num_users,num_features)\n",
+    "    \n",
+    "    # predictions = yHat | gives the predicted rating values\n",
+    "    predictions =  X @ Theta.T\n",
+    "    # Predicted minus actual\n",
+    "    err = (predictions - Y)\n",
+    "    # square the predicted minus actual and multiply by R (0,1) if that user has rated that movie\n",
+    "    # Then sum all values, many will be 0 because of R\n",
+    "    # Note this is cost without regularization\n",
+    "    J = 1/2 * np.sum((err**2) * R)\n",
+    "    \n",
+    "    #compute regularized cost function\n",
+    "    reg_X =  Lambda/2 * np.sum(Theta**2)\n",
+    "    reg_Theta = Lambda/2 *np.sum(X**2)\n",
+    "    reg_J = J + reg_X + reg_Theta\n",
+    "    \n",
+    "    # Compute gradient\n",
+    "    X_grad = err*R @ Theta\n",
+    "    Theta_grad = (err*R).T @ X\n",
+    "    grad = np.append(X_grad.flatten(),Theta_grad.flatten())\n",
+    "    \n",
+    "    # Compute regularized gradient\n",
+    "    reg_X_grad = X_grad + Lambda*X\n",
+    "    reg_Theta_grad = Theta_grad + Lambda*Theta\n",
+    "    reg_grad = np.append(reg_X_grad.flatten(),reg_Theta_grad.flatten())\n",
+    "    \n",
+    "    return J, grad, reg_J, reg_grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
