randomly initialized theta and X and ran gradient descent

--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -1407,20 +1407,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalizeRatings(Y, R):\n",
     "    m, n = Y.shape\n",
-    "    Y_mean = np.zeros((m,1))\n",
-    "    Y_norm = np.zeros((m,n))\n",
+    "    Ymean = np.zeros((m,1))\n",
+    "    Ynorm = np.zeros((m,n))\n",
     "    for i in range(m):\n",
     "        Ymean[i] = np.sum(Y[i,:])/np.count_nonzero(R[i,:])\n",
     "        Ynorm[i,R[i,:]==1] = Y[i,R[i,:]==1] - Ymean[i]\n",
     "        \n",
     "    return Ynorm, Ymean"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradientDescent(initial_parameters,Y,R,num_users,num_movies,num_features,alpha,num_iters,Lambda):\n",
+    "    \"\"\"\n",
+    "    Optimize X and Theta\n",
+    "    \"\"\"\n",
+    "    # unfold the parameters\n",
+    "    X = initial_parameters[:num_movies*num_features].reshape(num_movies,num_features)\n",
+    "    Theta = initial_parameters[num_movies*num_features:].reshape(num_users,num_features)\n",
+    "    \n",
+    "    J_history =[]\n",
+    "    \n",
+    "    for i in range(num_iters):\n",
+    "        params = np.append(X.flatten(),Theta.flatten())\n",
+    "        cost, grad = cofiCostFunc(params, Y, R, num_users, num_movies, num_features, Lambda)[2:]\n",
+    "        \n",
+    "        # unfold grad\n",
+    "        X_grad = grad[:num_movies*num_features].reshape(num_movies,num_features)\n",
+    "        Theta_grad = grad[num_movies*num_features:].reshape(num_users,num_features)\n",
+    "        X = X - (alpha * X_grad)\n",
+    "        Theta = Theta - (alpha * Theta_grad)\n",
+    "        J_history.append(cost)\n",
+    "    \n",
+    "    paramsFinal = np.append(X.flatten(),Theta.flatten())\n",
+    "    return paramsFinal , J_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = np.hstack((my_ratings,Y))\n",
+    "# boolean expression that evaluates to 1's and 0's\n",
+    "R = np.hstack((my_ratings!=0,R))\n",
+    "\n",
+    "# Normalize Ratings\n",
+    "Ynorm, Ymean = normalizeRatings(Y, R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_movies, num_users = Y.shape\n",
+    "num_features = 10\n",
+    "\n",
+    "# Set initial Parameters (Theta,X)\n",
+    "# sampled from the standard normal distribution (Gaussian) with mean 0 and sigma^2 1\n",
+    "X = np.random.randn(num_movies, num_features)\n",
+    "Theta = np.random.randn(num_users, num_features)\n",
+    "initial_parameters = np.append(X.flatten(),Theta.flatten())\n",
+    "Lambda = 10\n",
+    "\n",
+    "# Optimize parameters using Gradient Descent\n",
+    "paramsFinal, J_history = gradientDescent(initial_parameters,Y,R,num_users,num_movies,num_features,0.001,400,Lambda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
