--- a/assignment8/ex8.ipynb
+++ b/assignment8/ex8.ipynb
@@ -1544,8 +1544,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "# Load my predicted ratings and  the movie list into a pandas dataframe\n",
     "df = pd.DataFrame(np.hstack((my_predictions,np.array(movieList)[:,np.newaxis])))\n",
+    "# sort data by the rating column\n",
     "df.sort_values(by=[0],ascending=False,inplace=True)\n",
+    "# recreate index b\n",
     "df.reset_index(drop=True,inplace=True)"
    ]
   },
